--- a/python_prototype/requirements.txt
+++ b/python_prototype/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.31.0
-rasterio==1.3.9
 numpy==1.26.4
 scikit-learn==1.4.0
-matplotlib==3.8.2
+opencv-python==4.13.0
+pillow==12.1.1
+requests==2.31.0
