--- a/python_prototype/requirements.txt
+++ b/python_prototype/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.28.0,<2.0.0
 numpy>=1.24.0
 scikit-learn>=1.3.0
-opencv-python-headless>=4.8.0
+opencv-python-headless==4.13.0.92
 pillow>=9.0.0,<11
 requests>=2.31.0
